configuracion de servicio para guardar imagen

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
 <ion-content padding>
     <h3 *ngIf="images.length == 0" text-center>Please Select Image!</h3>
 
-    <ion-list>
+    <ion-list *ngIf="images.length > 0">
         <ion-item *ngFor="let img of images; index as pos" text-wrap>
             <ion-thumbnail slot="start">
                 <ion-img [src]="img.path"></ion-img>
