--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
- 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
+
 <ion-header>
     <ion-toolbar color="primary">
         <ion-title>
@@ -10,7 +10,7 @@
 <ion-content padding>
     <h3 *ngIf="images.length == 0" text-center>Please Select Image!</h3>
 
-    <ion-list *ngIf="images.length > 0">
+    <ion-list >
         <ion-item *ngFor="let img of images; index as pos" text-wrap>
             <ion-thumbnail slot="start">
                 <ion-img [src]="img.path"></ion-img>
