--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content padding>
-    <h3 *ngIf="images.length == 0" text-center>Please Select Image!</h3>
+    <h3 *ngIf="images.length == 0" text-center>Seleccione Imagen ! </h3>
 
     <ion-list >
         <ion-item *ngFor="let img of images; index as pos" text-wrap>
